fixed hero image was stretching on safari

--- a/_includes/css/common-hero.css
+++ b/_includes/css/common-hero.css
@@ -217,6 +217,7 @@ nav {
   font-size: 3rem;
 }
 .hero-container .image img {
+  height: 100%;
   width: 30rem;
   max-width: 90vw;
   filter: drop-shadow(5px -3px 0px var(--lighter-blue));
